switched ant / city -for-loop parallel for the ant-loop

--- a/openmp/Makefile
+++ b/openmp/Makefile
@@ -1,8 +1,9 @@
 all:
 	#gcc -o output.exe openmp_test.c -fopenmp
-	gcc  -o tsp-ant.exe ant.c ./../cities/csv-input.c -fopenmp -lm
+	gcc -g -o tsp-ant.exe ant.c ./../cities/csv-input.c -fopenmp -lm
 
 exec:
+	gcc -g -o tsp-ant.exe ant.c ./../cities/csv-input.c -fopenmp -lm
 	tsp-ant.exe
 clean:
 	rm -rf *.exe
